<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.pbmt.s_food.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.pbmt.s_food.ui.menu.MenuFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.pbmt.s_food.ui.fooddetail.FoodDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_food_detail" />
    <fragment
        android:id="@+id/nav_foodlist"
        android:name="com.pbmt.s_food.ui.foodlist.FoodListFragment"
        android:label="@string/menu_foodlist"
        tools:layout="@layout/food_list_fragment" />
    <fragment
        android:id="@+id/nav_cart"
        android:name="com.pbmt.s_food.ui.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/cart_fragment" />
    <fragment
        android:id="@+id/nav_view_orders"
        android:name="com.pbmt.s_food.ui.view_orders.ViewOrdersFragment"
        android:label="@string/menu_view_orders"
        tools:layout="@layout/view_orders_fragment" />
</navigation>